# super-cliffords

./: .gitignore  .pre-commit-config.yaml  LICENSE  OTOC.py  OTOC_Test.py  README.md  circuits.py  entropy.py  functionalform.py  gates.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  tests.yml
data/appendix_data/: N1080.csv  N1080_entropy.npz  N1200.csv  N1200_entropy.npz  N1320.csv  N1320_entropy.npz  N1440.csv  N1440_entropy.npz  N1560.csv  N1560_entropy.npz  N1680.csv  N1680_entropy.npz  N1800.csv  N1800_entropy.npz  N1920.csv  N1920_entropy.npz  N2040.csv  N2040_entropy.npz  N2160.csv  N2160_entropy.npz  N2280.csv  N2280_entropy.npz  N240.csv  N2400.csv  N2400_entropy.npz  N240_entropy.npz  N360.csv  N360_entropy.npz  N480.csv  N480_entropy.npz  N600.csv  N600_entropy.npz  N720.csv  N720_entropy.npz  N840.csv  N840_entropy.npz  N960.csv  N960_entropy.npz  appendix_data.md
data/entropy_data/: N1000_entropy.npz  N100_entropy.npz  N1080.npz  N1100_entropy.npz  N1200.npz  N1200_entropy.npz  N1300_entropy.npz  N1320.npz  N1400_entropy.npz  N1440.npz  N1500_entropy.npz  N1560.npz  N1600_entropy.npz  N1680.npz  N1700_entropy.npz  N1800.npz  N1800_entropy.npz  N1900_entropy.npz  N1920.npz  N2000_entropy.npz  N200_entropy.npz  N2040.npz  N2100_entropy.npz  N2160.npz  (+34 more)
examples/: 1example.ipynb  2parallell.ipynb  3initial_op.ipynb  example.ipynb  parallel_example.ipynb
plotters/: fig1.ipynb  fig2.ipynb  fig3.ipynb  fig4.ipynb  fig5.ipynb  fig6.ipynb
test/: OTOC_Test.py  test_entropy.py  test_gates.py  test_otoc.py  test_step.py  utils.py
(+30 files in other folders)
