[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "supercliffords"
authors = [{name = "Anthony P. Thompson", email = "anthony.peter.thompson@pm.me"}]
readme = "README.md"
dynamic = ["description"]
version = "0.1"
dependencies = [
    "stim >= 1.0"
]

[tool.ruff]
line-length = 79
